# Regulation-KG-RAG

./: .env.example  .gitignore  README.md  pyproject.toml
app/demo/: 1. 안전보건규칙 저장.py  2. VectorDB Embedding.py  3. test.py
app/utils/: preprocess.py
modules/open_law/: api.py  type.py
